syntax = "proto3";

package browserhive.v1;

// CaptureService provides web page capture functionality
service CaptureService {
  // Submit a capture request for a single URL (screenshot and/or HTML)
  // Uses fire-and-forget pattern: returns immediately after accepting the request.
  // The actual capture is processed asynchronously by the worker pool.
  rpc SubmitCapture(CaptureRequest) returns (CaptureAcceptance);

  // Get the current status of the queue and worker pool
  rpc GetStatus(Empty) returns (StatusResponse);
}

// Empty message for GetStatus RPC
message Empty {}

// Worker status enum
enum WorkerStatus {
  WORKER_STATUS_UNSPECIFIED = 0;
  WORKER_STATUS_IDLE = 1;
  WORKER_STATUS_BUSY = 2;
  WORKER_STATUS_ERROR = 3;
  WORKER_STATUS_STOPPED = 4;
}

// Error type enum
enum ErrorType {
  ERROR_TYPE_UNSPECIFIED = 0;
  ERROR_TYPE_HTTP = 1;           // HTTP error (4xx, 5xx, 3xx)
  ERROR_TYPE_TIMEOUT = 2;        // Timeout
  ERROR_TYPE_CONNECTION = 3;     // Connection error
  ERROR_TYPE_INTERNAL = 4;       // Internal error
}

// Capture options - flags for each output format
message CaptureOptions {
  bool png = 1;
  bool jpeg = 2;
  bool html = 3;
}

// Browser connection options
message BrowserOptions {
  // Remote browser URL (e.g., http://puppeteer:9222)
  string browser_url = 1;
}

// Task information for error records
message ErrorTaskInfo {
  // Task ID
  string task_id = 1;

  // Target URL
  string url = 2;

  // Display labels
  repeated string labels = 3;
}

// Error record with timestamp and task context
message ErrorRecord {
  // Error type
  ErrorType type = 1;

  // Human-readable error message
  string message = 2;

  // HTTP status code (only valid when type is ERROR_TYPE_HTTP)
  optional int32 http_status_code = 3;

  // HTTP status text (e.g., "Not Modified", "Not Found")
  optional string http_status_text = 4;

  // Timeout duration in ms (only valid when type is ERROR_TYPE_TIMEOUT)
  optional int32 timeout_ms = 5;

  // Timestamp when error occurred (ISO 8601 format)
  string timestamp = 6;

  // Task information (optional, not set for non-task errors like connection failures)
  optional ErrorTaskInfo task = 7;
}

// Worker information
message WorkerInfo {
  // Worker ID
  string id = 1;

  // Browser connection options
  BrowserOptions browser_options = 2;

  // Current status
  WorkerStatus status = 3;

  // Number of tasks processed
  int32 processed_count = 4;

  // Number of errors encountered
  int32 error_count = 5;

  // Error history (up to 10 most recent errors, newest first)
  repeated ErrorRecord error_history = 6;
}

// Request message for Capture RPC
message CaptureRequest {
  // Target URL to capture (required)
  string url = 1;

  // Display labels used for filename (optional)
  repeated string labels = 2;

  // Correlation ID provided by the client for tracking (optional)
  optional string correlation_id = 3;

  // Capture options (required, at least one must be true)
  CaptureOptions capture_options = 4;
}

// Acceptance message for Capture RPC
// Indicates whether the request was accepted for processing.
// Does NOT indicate capture success/failure (fire-and-forget).
message CaptureAcceptance {
  // Whether the request was accepted for processing
  bool accepted = 1;

  // Task ID generated by the server (UUID v4)
  // Can be used to track the task in server logs
  string task_id = 2;

  // Correlation ID provided in the request (if any)
  optional string correlation_id = 3;

  // Error message (only set when accepted=false due to validation errors)
  optional string error = 4;
}

// Response message for GetStatus RPC
message StatusResponse {
  // Number of tasks waiting in the queue
  int32 pending = 1;

  // Number of tasks currently being processed
  int32 processing = 2;

  // Number of completed tasks
  int32 completed = 3;

  // Number of healthy workers
  int32 healthy_workers = 5;

  // Total number of workers
  int32 total_workers = 6;

  // Whether the worker pool is running
  bool is_running = 7;

  // Detailed worker information
  repeated WorkerInfo workers = 8;
}
